--- a/style.css
+++ b/style.css
@@ -109,6 +109,8 @@ a {
 }
 #pesanSalam {
     font-family: Arial, Helvetica, sans-serif;
+    color: #152127;
+    background: white;
 }
 /* changeBg.html */
 #changeBg {
