--- a/style.css
+++ b/style.css
@@ -111,6 +111,8 @@ a {
     font-family: Arial, Helvetica, sans-serif;
     color: #152127;
     background: white;
+    display: inline-table;
+    padding: 1px 5px;
 }
 /* changeBg.html */
 #changeBg {
