--- a/style.css
+++ b/style.css
@@ -90,6 +90,19 @@ a {
     padding: 5px 10px;
     background-color: white;
     border-radius: 10px;
+    opacity: 0.6;
+    transition: 0.3s;
+}
+.clickable:hover {
+    opacity: 1;
+}
+
+.navClickable a {
+    opacity: 1;
+    transition: 0.3s;
+}
+.navClickable a:hover {
+    opacity: 0.6;
 }
 
 
