--- a/projects/tdlProj.css
+++ b/projects/tdlProj.css
@@ -137,3 +137,39 @@ button:hover {
     display: none;
     color: red;
 }
+
+button.nonint {
+    text-decoration: none;
+    width: 22%;
+    height: 95px;
+    border: none;
+    background: rgb(230, 157, 23);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-family: inherit;
+    font-size: 150%;
+    transition: 0.3s;
+}
+
+button.hasil{
+    text-decoration: none;
+    width: 22%;
+    height: 95px;
+    border: none;
+    background: rgb(211, 39, 39);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-family: inherit;
+    font-size: 150%;
+    transition: 0.3s;
+}
+
+button.nonint:hover {
+    background-color: rgb(19, 19, 24);
+}
+
+button.hasil:hover {
+    background-color: rgb(19, 19, 24);
+}
