--- a/projects/tdlProj.css
+++ b/projects/tdlProj.css
@@ -10,7 +10,7 @@ body {
 }
 
 .containerNav {
-    background-image: url("img/bgNav.png") ;
+    background-image: url("../img/bgNav.png") ;
     opacity: 0.9;
     width: 100%;
     height: 50px;
